data/derived/fa15/progs/unify/prog2988.ml.out
Characters 236-239:
  | Average (x, y) -> "(("^ exprToString e ^ "+" ^ exprToString e ^ ")"/2")"
                                                                    ^^^
Error: This expression has type string but an expression was expected of type
         int
